--- a/.github/workflows/deploy-hugo.yaml
+++ b/.github/workflows/deploy-hugo.yaml
@@ -51,12 +51,18 @@ jobs:
     if: github.event_name == 'pull_request' || github.ref == 'refs/heads/main' || needs.check-pr.outputs.has_pr != 'true'
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.140.2
+      HUGO_VERSION: 0.147.7
+      DART_SASS_VERSION: 1.87.0
     steps:
       - name: Install Hugo
         run: |
+          curl -LJO https://github.com/sass/dart-sass/releases/download/${DART_SASS_VERSION}/dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz
+          tar -xf dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz
+          cp -r dart-sass/* /usr/local/bin
+          rm -rf dart-sass*
           wget -O hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb
           sudo dpkg -i hugo.deb
+          sudo npm install -g sass
       
       - name: Checkout
         uses: actions/checkout@v4
