--- a/.github/workflows/deploy-hugo.yaml
+++ b/.github/workflows/deploy-hugo.yaml
@@ -60,6 +60,7 @@ jobs:
           tar -xf dart-sass-${DART_SASS_VERSION}-linux-x64.tar.gz
           cp -r dart-sass/* /usr/local/bin
           rm -rf dart-sass*
+          sudo apt install musl
           wget -O hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb
           sudo dpkg -i hugo.deb
       
