--- a/data/sites.yaml
+++ b/data/sites.yaml
@@ -4,7 +4,7 @@ sonnhalde:
   Groups:
     papagei:
       Icon: papagei.svg
-      Name: Papagai
+      Name: Papagei
       Color: blue
     balu:
       Icon: balu.svg
