--- a/data/menu.yaml
+++ b/data/menu.yaml
@@ -25,5 +25,7 @@ sublinks:
     href: /team
   - title: "Eltern"
     href: /eltern
+  - title: "Downloads"
+    href: /downloads
   - title: "Kontakt"
     href: /kontakt
