More content and review fixes

--- a/data/footer.yaml
+++ b/data/footer.yaml
@@ -9,10 +9,10 @@ extralogos:
       href: https://radix.ch/Gesunde-Schulen/Bewegung-und-Ernaehrung/Purzelbaum-Schweiz/Purzelbaum-KiTa
 sites:
     - title: Sonnhalde
-      phone: +41 62 296 1881
+      phone: 062 296 1881
       email: sonnhalde@kinderkrippe-olten.ch
     - title: Hagmatt
-      phone: +41 62 296 1881
+      phone: 062 212 6465
       email: hagmatt@kinderkrippe-olten.ch
 links:
     - title: Datenschutz
