--- a/data/team.yaml
+++ b/data/team.yaml
@@ -301,7 +301,7 @@
   lastname: von Arx
   picture: Melanie_von_Arx.jpg
   function:
-    - Elternvertretung
+    - Elternvertretung Hagmatt
   site: verein
 
 - firstname: Barbara
