--- a/data/menu.yaml
+++ b/data/menu.yaml
@@ -1,14 +1,14 @@
 mainlinks:
-  - title: "Hagmatt"
+  - title: "Kita Hagmatt"
     href: /hagmatt
     color: green
-  - title: "Sonnhalde"
+  - title: "Kita Sonnhalde"
     href: /sonnhalde
     color: red
   - title: "Anmeldung"
     href: /anmeldung
     color: blue
-  - title: "Aktuelles"
+  - title: "Geschichten"
     href: /#blog
     color: yellow
 
@@ -23,8 +23,8 @@ sublinks:
     href: /angebot#stellen
   - title: "Team"
     href: /team
-  - title: "Eltern"
-    href: /eltern
+  # - title: "Eltern"
+  #   href: /eltern
   - title: "Downloads"
     href: /downloads
   - title: "Kontakt"
