--- a/data/team.yaml
+++ b/data/team.yaml
@@ -321,7 +321,7 @@
 
 - firstname: Simone
   lastname: Riner
-  picture: Simone_Riner.png
+  picture: Simone_Riner.jpg
   function:
     - Elternvertretung
   site: verein
