--- a/data/team.yaml
+++ b/data/team.yaml
@@ -110,7 +110,7 @@
 
 - firstname: Alex
   lastname: Constantini
-  picture: Alex_Constantini.png
+  picture: Alex_Constantini.jpg
   function:
     - Aushilfe
   site: hagmatt
